<resources>
    <string name="app_name">erSathi Chat</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="this_is_main_page">This is Main Page</string>
    <string name="logout">Logout</string>
    <string name="login_to_your_account">Login To your Account</string>
    <string name="login">Login</string>
    <string name="your_password">Your Password</string>
    <string name="welcome_to_ersathi_chat">Welcome to erSathi chat</string>
    <string name="register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

</resources>
